--- a/scratch/scratch.html
+++ b/scratch/scratch.html
@@ -16,7 +16,7 @@
 <body>
   <div class="app">
     <div class="app-body">
-      <svg id="game" width="100%" height="100vh" viewbox="0 0 384 722" xmlns="http://www.w3.org/2000/svg">
+      <svg id="game" width="100%" height="100vh" viewbox="0 0 384 722" preserveAspectRatio="xMidYMid"xmlns="http://www.w3.org/2000/svg">
         <defs>
           <pattern id="smallGrid" width="10" height="10" patternUnits="userSpaceOnUse">
             <path id="smallGridPath" d="M 10 0 H 0 V 10" fill="none" stroke="lightgrey" stroke-width="0.5" />
