--- a/scratch/scratch.html
+++ b/scratch/scratch.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <title>new pipe</title>
+  <title>pong</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/7.3.0/rxjs.umd.min.js" integrity="sha512-y3JTS47nnpKORJX8Jn1Rlm+QgRIIZHtu3hWxal0e81avPrqUH48yk+aCi+gprT0RMAcpYa0WCkapxe+bpBHD6g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -33,19 +33,23 @@
             <stop offset="50%" stop-color="#DC0F0F90" />
             <stop offset="51%" stop-color="#2251CE90" />
           </linearGradient>
+          <linearGradient id="boardGradient" x1="0" x2="1" y1="0" y2="">
+            <stop offset="50%" stop-color="#DC0F0F90" />
+            <stop offset="51%" stop-color="#2251CE90" />
+          </linearGradient>
         </defs>
         <g id="surface" transform="translate(0, 0)" x="0" y="0" width="2961" height="2641">
           <rect  id="grid" x="0" y="0" width="900" height="2641" fill="url(#largeGrid)" />
         </g>
         <g id="boardGroup" transform="translate(0, 0)" x="0" y="0">
-          <rect id="boardBackground"  id="" x="0" y="0" width="384" height="425" fill="#fff" />
-          <g id="leftPaddleGroup" transform="translate(0, 0)" x="0" y="0" width="25" height="100">
-            <rect id="leftPaddle" class="paddle" x="25" y="0" width="25" height="100" fill="#434343" />
-          </g>
-          <g id="rightPaddleGroup" transform="translate(0, 0)" x="0" y="0" width="25" height="100">
-            <rect id="rightPaddle" class="paddle" y="0" x="335" width="25" height="100" fill="#434343" />
-          </g>
-          <circle fill="red" id="ball" r="5" cx="200" cy="200"></circle>
+          <rect id="boardBackground"  id="" x="0" y="0" width="384" height="400" fill="url(#boardGradient)" />
+          <!-- <g id="leftPaddleGroup" transform="translate(0, 0)" x="0" y="0" width="25" height="100">
+            <rect id="leftPaddle" rx="8" class="paddle" x="0" y="0" width="25" height="100" fill="#434343" />
+          </g> -->
+          <!-- <g id="rightPaddleGroup" transform="translate(0, 0)" x="0" y="0" width="25" height="100">
+            <rect id="rightPaddle" rx="8" class="paddle" y="0" x="335" width="25" height="100" fill="#434343" />
+          </g> -->
+          <!-- <circle fill="red" id="ball" r="8" cx="200" cy="200"></circle> -->
         </g>
       </svg>
     </div>
