--- a/scratch/scratch.html
+++ b/scratch/scratch.html
@@ -42,7 +42,7 @@
           <rect  id="grid" x="0" y="0" width="900" height="2641" fill="url(#largeGrid)" />
         </g>
         <g id="boardGroup" transform="translate(0, 0)" x="0" y="0">
-          <rect id="boardBackground"  id="" x="0" y="0" width="384" height="400" fill="url(#boardGradient)" />
+          <!-- <rect id="boardBackground"  id="" x="0" y="0" width="384" height="400" fill="url(#boardGradient)" /> -->
           <!-- <g id="leftPaddleGroup" transform="translate(0, 0)" x="0" y="0" width="25" height="100">
             <rect id="leftPaddle" rx="8" class="paddle" x="0" y="0" width="25" height="100" fill="#434343" />
           </g> -->
