--- a/dev/collision-accuracy.html
+++ b/dev/collision-accuracy.html
@@ -16,7 +16,7 @@
         <input type="range" min="10" max="50" value="10" step="5" onchange="sliderChange(event)"/>
     </div>
     <svg id="SVG_scene" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ></svg>
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
