--- a/index.html
+++ b/index.html
@@ -41,16 +41,7 @@
         <g id="surface" transform="translate(0, 0)" x="0" y="0" width="100%" height="100%">
           <rect id="grid" x="0" y="0" width="100vw" height="400" fill="url(#largeGrid)" />
         </g>
-        <g id="boardGroup" transform="translate(0, 0)" x="0" y="0">
-          <!-- <rect id="boardBackground"  id="" x="0" y="0" width="384" height="400" fill="url(#boardGradient)" /> -->
-          <!-- <g id="leftPaddleGroup" transform="translate(0, 0)" x="0" y="0" width="25" height="100">
-            <rect id="leftPaddle" rx="8" class="paddle" x="0" y="0" width="25" height="100" fill="#434343" />
-          </g> -->
-          <!-- <g id="rightPaddleGroup" transform="translate(0, 0)" x="0" y="0" width="25" height="100">
-            <rect id="rightPaddle" rx="8" class="paddle" y="0" x="335" width="25" height="100" fill="#434343" />
-          </g> -->
-          <!-- <circle fill="red" id="ball" r="8" cx="200" cy="200"></circle> -->
-        </g>
+        <g id="boardGroup" transform="translate(0, 0)" x="0" y="0"></g>
       </svg>
     </div>
   </div>
