--- a/scratch/scratch2.html
+++ b/scratch/scratch2.html
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div>
-  <script src="./extendEl.js" type="module"></script>
+  <script src="./script.js" type="module"></script>
 </body>
 
 </html>
